# Flask-Buefy

./: LICENSE  README.md  pyproject.toml
flask_buefy/: __init__.py
flask_buefy/templates/buefy/: base.html
sample_app/: __init__.py
sample_app/templates/: index.html
tests/: test_flask_buefy.py
